infra/k8s/manifests/cart-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cart
  template:
    metadata:
      labels:
        app: cart
    spec:
      containers:
      - name: cart
        image: 013218822729.dkr.ecr.us-east-1.amazonaws.com/cart-service:v1
        ports:
        - containerPort: 3002
