infra/k8s/manifests/payment-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: 013218822729.dkr.ecr.us-east-1.amazonaws.com/payment-service:v1
        ports:
        - containerPort: 3003
