infra/k8s/manifests/search-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: 013218822729.dkr.ecr.us-east-1.amazonaws.com/search-service:v1
        ports:
        - containerPort: 3004
