infra/k8s/manifests/search-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-deployment
  labels:
    app: search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: search
  template:
    metadata:
      labels:
        app: search
    spec:
      containers:
      - name: search
        image: search-service:latest
        ports:
        - containerPort: 3004
