infra/k8s/manifests/cart-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  labels:
        app: frontend
spec:
  type: ClusterIP
  selector:
    app: cart
  ports:
  - port: 3002
    targetPort: 3002
