infra/k8s/manifests/payment-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - port: 3003
    targetPort: 3003
