infra/k8s/manifests/payment-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
        app: frontend
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
  - port: 3003
    targetPort: 3003
