infra/k8s/manifests/product-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - port: 3001
    targetPort: 3001
