infra/k8s/manifests/product-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
        app: frontend
spec:
  type: ClusterIP
  selector:
    app: product
  ports:
  - port: 3001
    targetPort: 3001
