infra/k8s/manifests/search-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: search-service
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
  - port: 3004
    targetPort: 3004
