infra/k8s/manifests/search-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-service
  labels:
        app: frontend
spec:
  type: ClusterIP
  selector:
    app: search
  ports:
  - port: 3004
    targetPort: 3004
